# newnovel

./: LICENSE  README.md
newnovel/: novel_similarity_webui.py  novel_similarity_webui_config.json  start_novel_webui.bat
novel filter tool/: .gitignore  Cargo.toml  README.md
novel filter tool/docs/superpowers/plans/: 2026-03-24-novel-tool-correctness-hardening.md
novel filter tool/docs/superpowers/specs/: 2026-03-24-novel-tool-correctness-hardening-design.md
novel filter tool/src/: config.rs  engine.rs  export.rs  main.rs  matcher.rs  model.rs  normalize.rs  recommend.rs  safety.rs  scanner.rs  web.rs
