[package]
name = "novel_filter_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
trash = "5.2"
unicode-normalization = "0.1"
walkdir = "2.5"
webbrowser = "1.0"
rayon = "1.11"
regex = "1.12"
rfd = "0.15"
once_cell = "1.21"

[dev-dependencies]
tempfile = "3.23"
